@@ -3,6 +3,8 @@
 	- Doc for stream-wait-size and unit test.
 	- unbound-control stats has mem.streamwait that counts TCP and TLS
 	  waiting result buffers.
+	- Fix for #4219: secondaries not updated after serial change, unbound
+	  falls back to AXFR after IXFR gives several timeout failures.
 
 21 January 2018: Wouter
 	- Fix tcp idle timeout test, for difference in the tcp reply code.
